# nbody-pipeline

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: juwels_madnuc.yaml
docs/: analysis_architecture.md  api.md  index.md  terminology.md
dragon3_pipelines/: __init__.py  __main__.py  query.py
dragon3_pipelines/analysis/: __init__.py  b_type_binary.py  binary_stellar_type.py  cache_paths.py  compact_object_history.py  hdf5_scan.py  initial_total_mass.py  intermediate_mass_black_hole.py  once.py  parquet_cache.py  primordial_binary.py  snapshot_summary.py
dragon3_pipelines/config/: default_config.yaml  settings.py
dragon3_pipelines/io/: lagr_reader.py  text_parsers.py
dragon3_pipelines/schemas/: snapshot_summary.yaml
dragon3_pipelines/utils/: color.py
dragon3_pipelines/visualization/: base.py  collision.py  lagrangian.py  single_star.py
nbody_pipeline/: __init__.py  __main__.py  query.py
nbody_pipeline/analysis/: __init__.py  b_type_binary.py  bin_label_backfill.py  binary_stellar_type.py  cache_paths.py  compact_binary_counter.py  compact_object_history.py  current_lagrangian.py  galactic_energy_angular_momentum.py  galactic_orbit.py  hdf5_scan.py  initial_total_mass.py  intermediate_mass_black_hole.py  kstar_semantics.py  once.py  parquet_cache.py  particle_lake.py  particle_tracker.py  physics.py  primordial_binary.py  snapshot_summary.py
nbody_pipeline/config/: __init__.py  default_config.yaml  settings.py
nbody_pipeline/io/: __init__.py  base.py  collision_reader.py  hdf5_reader.py  lagr_reader.py  text_parsers.py
nbody_pipeline/schemas/: __init__.py  compact_object_history.yaml  snapshot_binaries.yaml  snapshot_mergers.yaml  snapshot_scalars.yaml  snapshot_singles.yaml  snapshot_summary.yaml
nbody_pipeline/scripts/: README.md  _nbody_jpg_to_movie_serial.sh  nbody_jpg_to_movie.sh
nbody_pipeline/utils/: __init__.py  color.py  logging.py  misc.py  serialization.py  shell.py
nbody_pipeline/visualization/: __init__.py  base.py  binary_star.py  collision.py  evolution_path.py  galactic_orbit.py  lagrangian.py  particle_history.py  purge.py  single_star.py
scripts/: ci.sh  lake_preflight.py  purge_legacy_feather_cache.py  release.sh
tests/: __init__.py  conftest.py  test_analysis.py  test_bin_label_backfill.py  test_cache_paths.py  test_config.py  test_evolution_path.py  test_hdf5_scan.py  test_io.py  test_kstar_semantics.py  test_main_analyze.py  test_parquet_cache.py  test_particle_lake.py  test_pilot_tasks.py  test_query.py  test_raw_reader.py  test_table_schema.py  test_utils.py  test_visualization.py
