[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nbody-pipeline"
dynamic = ["version"]
description = "Pipelines for N-body simulation data analysis and visualization"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Kai Wu"}
]
keywords = ["astronomy", "n-body", "simulation", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]

dependencies = [
    "astropy>=7.0.1",
    "colour-science>=0.4.6",
    "duckdb>=1.0",
    "h5py>=3.13.0",
    "galpy>=1.11.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "plotly>=6.0",
    "pyarrow",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.6",
    "black==26.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "lz4",
]

[project.scripts]
nbody-plot = "nbody_pipeline.__main__:main"

[tool.setuptools]
packages = ["nbody_pipeline", "nbody_pipeline.schemas"]

[tool.setuptools.dynamic]
version = {attr = "nbody_pipeline.__version__"}

[tool.setuptools.package-data]
nbody_pipeline = ["config/*.yaml"]
"nbody_pipeline.schemas" = ["*.yaml"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312', 'py313']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
